<resources>
    <string name="app_name">Todo App</string>
    <string name="add_todo">Add todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_button">edit button</string>
    <string name="delete_button">delete button</string>
    <string name="check_button">check button</string>
    <string name="hint_title">Title</string>
    <string name="hint_subtitle">Detail</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please Wait...</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="clear_date_filter">Clear Date Filter</string>
    <string name="filter">Filter:</string>
</resources>