<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityEditTodo">

    <include
        android:id="@+id/edit_todo_toolbar"
        layout="@layout/appbar_default"/>

    <EditText
        android:id="@+id/title_edit_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/edit_todo_toolbar"
        android:hint="@string/hint_title"
        style="@style/EditTextDefaultStyle"
        />

    <EditText
        android:id="@+id/subtitle_edit_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_subtitle"
        app:layout_constraintTop_toBottomOf="@id/title_edit_edt"
        style="@style/EditTextDefaultStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_todo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subtitle_edit_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_todo_btn"
        android:text="@string/update"
        style="@style/ButtonDefaultStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_todo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subtitle_edit_edt"
        app:layout_constraintStart_toEndOf="@id/update_todo_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel"
        style="@style/ButtonDefaultStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>