<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityAddTodo">

    <include
        android:id="@+id/tb_add_todo"
        layout="@layout/appbar_default"/>

    <EditText
        android:id="@+id/edt_title_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/tb_add_todo"
        android:hint="@string/hint_title"
        style="@style/EditTextDefaultStyle"
        />

    <EditText
        android:id="@+id/edt_subtitle_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_subtitle"
        app:layout_constraintTop_toBottomOf="@id/edt_title_add"
        style="@style/EditTextDefaultStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_subtitle_add"
        android:text="@string/add"
        style="@style/ButtonDefaultStyle"
        />



</androidx.constraintlayout.widget.ConstraintLayout>