<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/loginToolbar"
        layout="@layout/appbar_default"/>

    <EditText
        android:id="@+id/username_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/loginToolbar"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/EditTextDefaultStyle"
        />

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/username_edt"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/EditTextDefaultStyle"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/password_edt"
        style="@style/ButtonDefaultStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>